CHANGES LIST:
facts: supports multiple listing (through start- and end-index and at-most value)
assert: supports multiple assertions
retract: supports multiple retractions, supports fact specification through its index
watch: supports (watch all)
unwatch: supports (unwatch all)
defrule: supports optional rule title string
defrule: supports the &fact <- <pattern> notation

added retract-all (to replace clips (retract *))
added ppdefrule
added undeffacts

TODO:
modify defrule to support:
  the singleton ? variable
  the ~ (negative) | (alternative) and & (conective) notations
dribble-on, dribble-off
set-break, remove-break, show-breaks
matches (rule) - shows partial matches of rule conditions against working memory
list-deffacts, ppdeffacts
deffact should check, that all variables appearing in RHS are bound in LHS
wildcards
redefine initialize-instance methods as after, if possible
add documentation to classes, functions, methods, macros and slots (using :documentation in slot definition)

CLIPS FEATURES NOT INTENDED TO SUPPORT:
not all clips functions are supported on the RHS (e.g. printout)
template slot types